--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,1 +1,14 @@
-/**/
+/*Media Queries*/
+
+@media only screen and (max-width: 1108px){
+  
+  .wrapper {
+    width: 90%;
+  }
+  
+  #social{
+    position: absolute;
+    top: 82px;
+    right: 4px;
+  }
+}
