--- a/css/responsive.css
+++ b/css/responsive.css
@@ -77,5 +77,18 @@
   
 }
 
-
+@media only screen and (max-width: 700px) {
+ 
+ #navbar nav a {
+   display: none;
+ } 
+ 
+ #navbar nav a:menu_icon {
+   display: block;
+   float: right;
+   font-size: 1.5em;
+   padding: ;
+ }
+  
+}
 
